--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   ],
   "type": "module",
   "main": "./umd/ecstra.js",
-  "module": "./index.js",
-  "types": "./index.d.ts",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "npm run copy:to:dist && npm run build:ts && npm run build:umd",
     "build:ts": "tsc",
