--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "game"
   ],
   "type": "module",
-  "main": "./umd/ecstra.js",
+  "main": "./dist/umd/ecstra.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
